# RobotChassis_Firmware

./: .gitignore  .mxproject  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  RobotChassis_Firmware.ioc  STM32F103XX_FLASH.ld  build.ps1  build.sh  flash.sh  generate_pid_frame.py  pid_command_generator.py
.claude/: settings.local.json
Core/Inc/: adc.h  main.h  stm32f1xx_it.h  tim.h
Core/Src/: adc.c  gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
Documentation/: Core外设配置详解.md  Core外设配置速查表.md  Git使用指南.md  README.md  模块接口重构方案.md
Documentation/01_系统/: 构建说明.md
Documentation/02_硬件/: Core外设配置详解.md  定时器配置详解.md
Documentation/03_IMU/: MPU6050_IMU架构详解.md
Documentation/05_通信/: 串口通信模块详解.md
Documentation/06_调试/: 调试系统使用说明.md
Documentation/MPU6050/: MPU6050_IMU架构详解.md
Documentation/MotorControl/: 电机控制模块详解.md
Documentation/知识点/: 01-DMA工作机制.md  02-DMP固件加载原理.md
Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_tim.h
Tools/: README.md  comm_debug_tool.py  debug_serial_send.py  frame_generator.py  generate_motor_command.py  generate_motor_command_with_rpm.py  serial_controller.py  serial_reader.py  sync_ptp.py  test_serial_raw.py
USER/: README.md  user_config.c  user_config.h
USER/Communication/: comm_protocol.c  comm_protocol.h
USER/EXIT/: EXIT.c  EXIT.h
USER/IMU/: imu.c  imu_data.c  imu_data.h
USER/IMU/MPU6050/: mpu6050.c  mpu6050.h  mpuiic.c  mpuiic.h
USER/IMU/MPU6050/eMPL/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c
USER/LedControl/: led_control.c  led_control.h
USER/MotorControl/: motor_control.c  motor_control.h
USER/PowerManagement/: power_management.c  power_management.h
USER/ServoControl/: servo_control.c  servo_control.h
USER/System/: README.md  retarget.c  retarget.h  timer.c  timer.h  timestamp.c  timestamp.h
USER/TimeSync/: ptp_sync.h
cmake/stm32cubemx/: CMakeLists.txt
firmware/: CMakeLists.txt  COLCON_IGNORE  README.md  RobotChassis_Firmware.ioc
firmware/Core/Inc/: main.h  usart.h
firmware/Core/Src/: main.c  stm32f1xx_it.c  tim.c  usart.c
firmware/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_tim.c
firmware/Tools/: PROTOCOL.md  frame_generator.py  serial_monitor.py  serial_reader.py  sync_ptp.py  test_motor_control.py
firmware/USER/: MODULE_DEPENDENCIES.md  main.c  user_config.h
firmware/USER/Communication/: comm_protocol.c  comm_protocol.h
firmware/USER/IMU/: imu.c  imu.h
firmware/USER/IMU/MPU6050/eMPL/: inv_mpu.c  inv_mpu_dmp_motion_driver.c  inv_mpu_dmp_motion_driver.h
firmware/USER/MotorControl/: motor_control.c  motor_control.h
firmware/USER/PowerManagement/: power_management.c
firmware/USER/ServoControl/: servo_control.h
firmware/USER/System/: debug.h
firmware/USER/TimeSync/: ptp_sync.c
firmware/cmake/stm32cubemx/: CMakeLists.txt
ros2_ws/src/: README.md
ros2_ws/src/depend/serial_ros2/src/impl/list_ports/: list_ports_linux.cc
ros2_ws/src/robot_chassis_driver/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robot_chassis_driver/config/: base.yaml  ekf.yaml  robot_chassis.yaml
ros2_ws/src/robot_chassis_driver/include/robot_chassis_driver/: robot_chassis_node.hpp  wheel_odom_calibrator.hpp
ros2_ws/src/robot_chassis_driver/launch/: robot_chassis.launch.py
ros2_ws/src/robot_chassis_driver/src/: robot_chassis_node.cpp  robot_chassis_node_main.cpp  wheel_odom_calibrator.cpp
